--- a/.github/workflows/autolable.yml
+++ b/.github/workflows/autolable.yml
@@ -20,6 +20,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gh
+      - name: Install GitHub & Claude CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gh
+          npm install -g @anthropic-ai/claude-cli
     
       - name: Run Claude Classifier
         env:
