--- a/.github/workflows/autolable.yml
+++ b/.github/workflows/autolable.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gh
-          npm install -g @anthropic-ai/claude-cli
+          npm install -g @anthropic-ai/claude-code
     
       - name: Run Claude Classifier
         env:
