Chages to the queue_runner.yml file

--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Pick next queued issue
         id: pick
         env:
-          GH_TOKEN: ${{ secrets._GITHUB_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
 
         run: |
           # Check if any issue is already in progress
