Chages to the queue_runner.yml file

--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Pick next queued issue
         id: pick
-        env:
-          GH_TOKEN: ${{ github.token }}
+        env: 
+          GH_TOKEN: ${{ secrets._GITHUB_TOKEN }}
 
         run: |
           # Check if any issue is already in progress
@@ -53,6 +53,8 @@ jobs:
         run: echo "No queued issues."
 
       - name: Update labels and trigger Claude
+        env: 
+          GH_TOKEN: ${{ secrets._GITHUB_TOKEN }}
         if: steps.pick.outputs.issue_number != ''
         run: |
           ISSUE=${{ steps.pick.outputs.issue_number }}
