--- a/.github/workflows/queue_runner.yml
+++ b/.github/workflows/queue_runner.yml
@@ -1,7 +1,7 @@
 name: Claude Queue Runner
 on:
-  schedule:
-    - cron: "*/1 * * * *" # every 1 minutes
+#   schedule:
+#     - cron: "*/1 * * * *" # every 1 minutes
   workflow_dispatch: {}
 
 concurrency:
